--- a/src/app/evaluation/url-input/url-input.component.scss
+++ b/src/app/evaluation/url-input/url-input.component.scss
@@ -44,7 +44,7 @@
   color: whitesmoke;
   background-color: red;
 }
-
+/*
 .dropdown {
   position: relative;
   display: inline-block;
@@ -76,4 +76,31 @@
 
 .dropdown-content-open {
   display: block;
+}*/
+
+.error {
+  color: #ff766e;
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+h2 {
+  font-size: 1.25em;
+  font-weight: normal;
+  margin: 0.5em 0 0.25em 0;
+}
+
+.div-checkbox {
+  max-width: 100%;
+  margin: 0 auto;
+  display: grid !important;
+  grid-gap: 1rem;
+}
+@media (min-width: 400px) {
+  .div-checkbox { grid-template-columns: repeat(2, 1fr); }
+}
+@media (min-width: 700px) {
+  .div-checkbox { display: flex !important; margin: 0 0; }
 }
