--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,9 +2,9 @@
   <img src="/assets/images/logo2.png" alt="Qualweb logo"/>
 </div>
 <section fxLayout="row" fxLayoutAlign="center center">
-  <div fxFlex="60" fxFlex.lt-md="75" fxFlex.lt-sm="90">
+  <div fxFlex="60" fxFlex.lt-md="80">
     <h1>{{ 'HOMEPAGE.title' | translate }}</h1>
-    <app-url-input fxLayout="row"></app-url-input>
+    <app-url-input></app-url-input>
   </div>
 </section>
 <div fxLayout="row" class="footer">
