--- a/src/app/evaluation/url-input/url-input.component.scss
+++ b/src/app/evaluation/url-input/url-input.component.scss
@@ -94,13 +94,16 @@ h2 {
 
 .div-checkbox {
   max-width: 100%;
-  margin: 0 auto;
   display: grid !important;
   grid-gap: 1rem;
 }
 @media (min-width: 400px) {
-  .div-checkbox { grid-template-columns: repeat(2, 1fr); }
+  .div-checkbox {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media (min-width: 700px) {
-  .div-checkbox { display: flex !important; margin: 0 0; }
+  .div-checkbox {
+    display: flex !important;
+  }
 }
