--- a/src/app/evaluation/url-input/url-input.component.scss
+++ b/src/app/evaluation/url-input/url-input.component.scss
@@ -37,12 +37,16 @@
   font-size: 1em;
   color: whitesmoke;
   background-color: #1c5d95;
+  text-align: center;
+  white-space: pre-line;
 }
 
 .error-tooltip {
   font-size: 1em;
   color: whitesmoke;
-  background-color: red;
+  background-color: #680000;
+  text-align: center;
+  white-space: pre-line;
 }
 /*
 .dropdown {
