--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -403,8 +403,8 @@
                             </ng-container>
 
                             <ng-container *ngSwitchDefault>
-                              <div fxLayout="column" fxFlex>
-                                <div fxLayout="row" class="code_block">
+                              <div fxLayout="column">
+                                <div class="code_block">
                                   <pre fxFlex="95" fxFlex.lt-md="90"><code [highlight]="test.htmlCode.toString()"></code></pre>
                                   <button mat-icon-button fxFlex (click)="openCodeDialog(test.htmlCode)"
                                           matTooltip="{{'EVALUATION_PAGE.report.result_code' | translate}}">
