--- a/src/app/layout/header/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/layout/header/breadcrumbs/breadcrumbs.component.html
@@ -1,7 +1,8 @@
 <div fxLayout="row" fxLayoutAlign="start center">
   <span fxLayout="row" fxLayoutAlign="start center" class="right-buttons">
     <a routerLink="/" mat-icon-button matTooltip="{{'HEADER.homepage' | translate}}"
-       attr.aria-label="{{'HEADER.homepage' | translate}}">
+       attr.aria-label="{{'HEADER.homepage' | translate}}"
+       title="Homepage">
       <mat-icon>home</mat-icon>
     </a>
   </span>
