--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -8,5 +8,5 @@
   </div>
 </section>
 <div fxLayout="row" class="footer">
-  <a routerLink="about"> {{ 'HOMEPAGE.about' | translate }} </a>
+  <a routerLink="about" title="About page"> {{ 'HOMEPAGE.about' | translate }} </a>
 </div>
