update to /evaluator/

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,18 +3,18 @@
 <footer>
   <div fxFlex="7" fxFlex.lt-md="15" class="first_img fifth_container" aria-label="LASIGE website">
     <a href="http://www.lasige.di.fc.ul.pt/" target="_blank">
-      <img alt="LaSIGE website" src="/assets/images/lasige_logo.png">
+      <img alt="LaSIGE website" src="assets/images/lasige_logo.png">
     </a>
   </div>
   <div fxFlex="7" fxFlex.lt-md="15" class="fifth_container" aria-label="FCUL website">
     <a href="https://ciencias.ulisboa.pt/" target="_blank">
       <img alt="FCUL website"
-           src="/assets/images/ciencias_ulisboa_marca_horizontal_rgb_branco.png">
+           src="assets/images/ciencias_ulisboa_marca_horizontal_rgb_branco.png">
     </a>
   </div>
   <div fxFlex="7" fxFlex.lt-md="15" class="fifth_container" aria-label="FCT website" >
     <a href="https://www.fct.pt/" target="_blank">
-      <img alt="FCT website" src="/assets/images/fct_logo.png">
+      <img alt="FCT website" src="assets/images/fct_logo.png">
     </a>
   </div>
   <div fxFlex="7" fxFlex.lt-md="15" class="last_img fifth_container" aria-label="W3C WAI-Tools website">
