--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,7 +1,7 @@
 
 <div class="main" fxLayout="row" fxLayoutAlign="center center">
   <div fxFlex="80">
-    <img ngClass.gt-xs="float_right" ngClass.lt-sm="align_center" src="/assets/images/logo2.png" alt="Qualweb logo"/>
+    <img ngClass.gt-xs="float_right" ngClass.lt-sm="align_center" src="assets/images/logo2.png" alt="Qualweb logo"/>
 
     <hr class="combo_breaker">
     <h2>{{ 'ABOUT_PAGE.title_about' | translate }}</h2>
