--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -582,7 +582,7 @@
 </div>
 <div *ngIf="evaluateLoading" fxLayout="column">
   <div fxLayoutAlign="center center">
-    <img src="/assets/images/logo2.png" alt="Qualweb logo"/>
+    <img src="assets/images/logo2.png" alt="Qualweb logo"/>
   </div>
   <div fxLayout="column" fxLayoutAlign="center center" aria-live="polite">
     <mat-spinner color="primary" [diameter]="130" [strokeWidth]="13"></mat-spinner>
