--- a/src/app/pages/error-page/error-page.component.html
+++ b/src/app/pages/error-page/error-page.component.html
@@ -1,6 +1,6 @@
 <div class="main" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
   <div>
-    <img src="/assets/images/logo2.png" alt="Qualweb logo"/>
+    <img src="assets/images/logo2.png" alt="Qualweb logo"/>
   </div>
   <div fxFlex="50" fxFlex.lt-md="80" class="text">
     <hr class="combo_breaker">
