--- a/src/app/layout/header/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/layout/header/breadcrumbs/breadcrumbs.component.html
@@ -3,7 +3,7 @@
     <a routerLink="/" mat-icon-button matTooltip="{{'HEADER.homepage' | translate}}"
        attr.aria-label="{{'HEADER.homepage' | translate}}"
        title="Homepage">
-      <mat-icon>home</mat-icon>
+      <mat-icon aria-hidden="true">home</mat-icon>
     </a>
   </span>
 
