--- a/src/app/evaluation/url-input/url-input.component.scss
+++ b/src/app/evaluation/url-input/url-input.component.scss
@@ -99,7 +99,7 @@ h2 {
 .div-checkbox {
   max-width: 100%;
   display: grid !important;
-  grid-gap: 1rem;
+  grid-gap: 0.5em;
 }
 @media (min-width: 400px) {
   .div-checkbox {
