--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -106,10 +106,10 @@
                               (click)="$event.stopPropagation()">
                   {{ "EVALUATION_PAGE.filters.show_css" | translate }}
                 </mat-checkbox>
-                <mat-checkbox [(ngModel)]="showBP" [disabled]="!this.modulesToExecute['bp']"
+                <!--mat-checkbox [(ngModel)]="showBP" [disabled]="!this.modulesToExecute['bp']"
                               (click)="$event.stopPropagation()">
                   {{ "EVALUATION_PAGE.filters.show_bp" | translate }}
-                </mat-checkbox>
+                </mat-checkbox-->
               </div>
             </div>
             <div class="filter border" fxFlex.gt-xs="30"
