--- a/src/app/evaluation/url-input/url-input.component.html
+++ b/src/app/evaluation/url-input/url-input.component.html
@@ -1,33 +1,41 @@
 <mat-card class="input_url">
   <form (submit)="submit($event)" novalidate fxLayout="row">
-    <input type="url" placeholder="{{ 'INPUT_URL.placeholder' | translate }}" [formControl]="urlForm" autofocus fxFlex="70" fxFlex.gt-sm="80">
-    <div fxLayout="row" fxLayoutAlign="center center" fxFlex="10" fxFlex.gt-sm="5">
-      <mat-icon class="info" *ngIf="urlForm.hasError('required')"
-                aria-hidden="false"
-                tabindex="0"
-                #tooltipInfo="matTooltip"
-                (focus)="tooltipInfo.show()"
-                aria-label="{{ 'INPUT_URL.example_url' | translate }}"
-                matTooltip="{{ 'INPUT_URL.example_url' | translate }}"
-                matTooltipClass="info-tooltip"
-                role="presentation">
-        info
-      </mat-icon>
-      <mat-icon class="error" *ngIf="urlForm.hasError('url')"
-                aria-hidden="false"
-                tabindex="0"
-                #tooltipError="matTooltip"
-                (focus)="tooltipError.show()"
-                aria-label="{{ 'INPUT_URL.invalid_url' | translate }}"
-                matTooltip="{{ 'INPUT_URL.invalid_url' | translate }}"
-                matTooltipClass="error-tooltip"
-                role="presentation">
-        error_outline
-      </mat-icon>
+    <div fxFlex fxLayout.xs="column" fxLayout="row">
+      <div fxFlex.xs fxFlex.gt-xs="85">
+        <input type="url" placeholder="{{ 'INPUT_URL.placeholder' | translate }}" [formControl]="urlForm" autofocus fxFlex="85">
+        <div fxLayoutAlign="center center" fxFlex="10">
+          <mat-icon class="info" *ngIf="urlForm.hasError('required')"
+                    aria-hidden="false"
+                    tabindex="0"
+                    #tooltipInfo="matTooltip"
+                    (focus)="tooltipInfo.show()"
+                    aria-label="{{ 'INPUT_URL.example_url' | translate }}"
+                    matTooltip="{{ 'INPUT_URL.example_url' | translate }}"
+                    matTooltipClass="info-tooltip"
+                    role="presentation">
+            info
+          </mat-icon>
+          <mat-icon class="error" *ngIf="urlForm.hasError('url')"
+                    aria-hidden="false"
+                    tabindex="0"
+                    #tooltipError="matTooltip"
+                    (focus)="tooltipError.show()"
+                    aria-label="{{ 'INPUT_URL.invalid_url' | translate }}"
+                    matTooltip="{{ 'INPUT_URL.invalid_url' | translate }}"
+                    matTooltipClass="error-tooltip"
+                    role="presentation">
+            error_outline
+          </mat-icon>
+        </div>
+        
+      </div>
+      <div fxFlex fxLayout.xs="row" fxLayout="column" fxLayoutAlign="center center" class="input_button">
+        <input type="submit" [disabled]="urlForm.invalid || noCheckboxSelected" fxFlex value="{{ 'INPUT_URL.submit' | translate }}"/>
+      </div>
     </div>
-    <button mat-button type="submit" [disabled]="urlForm.invalid || noCheckboxSelected" fxFlex>
-      {{ "INPUT_URL.submit" | translate }}
-    </button>
+
+    
+
   </form>
 </mat-card>
 <div fxLayout="column">
