--- a/src/app/evaluation/url-input/url-input.component.scss
+++ b/src/app/evaluation/url-input/url-input.component.scss
@@ -18,11 +18,10 @@
     font-size: 1.2em;
     outline: none;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    cursor: pointer;
   }
 
   mat-icon {
-    cursor: pointer;
+    cursor: default ;
   }
 
   .info {
@@ -36,7 +35,7 @@
   input:disabled {
     -webkit-text-fill-color: grey;
     opacity: 1;
-    cursor: default;
+    cursor: default !important;
   }
   
   .input_button {
@@ -44,8 +43,9 @@
     border-radius: 3px;
     input {
       width: 100%;
+      cursor: pointer;
     }
-    input:focus {
+    input:focus, input:active {
       background-color: #545454;
     }
   }
@@ -108,7 +108,7 @@ h1 {
   margin-bottom: 0;
 }
 
-h2 {
+.subtitle{
   font-size: 1.25em;
   font-weight: normal;
   margin: 0.5em 0 0.25em 0;
